queues - notificari prin Boxcar cand un utilizator nou se inregistreaza

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
 	"license": "MIT",
 	"require": {
 		"laravel/framework": "4.2.*",
-		"bugsnag/bugsnag-laravel":"1.*"
+		"bugsnag/bugsnag-laravel":"1.*",
+		"iron-io/iron_mq": "dev-master"
 	},
 	"autoload": {
 		"classmap": [
